--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <body>
 
 <!-- Música de fondo -->
-<audio id="musicaFondo" src="poco.mp3" loop autoplay></audio>
+<audio id="musicaFondo" src="POCO.mp3" loop autoplay></audio>
 <button id="btnMusica" style="position: fixed; top: 10px; right: 10px; z-index: 2000; padding:10px 15px; border:none; border-radius:10px; background:#ff2d75; color:white; cursor:pointer;">
   🔊 Música
 </button>
@@ -287,3 +287,4 @@
 
 </body>
 </html>
+
