--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <p><strong>🎈 Edad:</strong> 7 años</p>
       <p><strong>📅 Fecha:</strong> 17 / 01 / 2026</p>
       <p><strong>⏰ Hora:</strong> 2:00 pm</p>
-      <p><strong>📍 Lugar:</strong> La calle Malearte y Jode H Figueroa</p>
+      <p><strong>📍 Lugar:</strong> La calle Malearte y Jose H Figueroa</p>
       <p>✨ ¡Te esperamos! ✨</p>
       <button class="confirmar" onclick="alert('¡Gracias por confirmar! Nos vemos en la fiesta 🎉')">Confirmar Asistencia</button>
     </div>
@@ -283,3 +283,4 @@
 
 </body>
 </html>
+
